--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KEITH-MD</title>
+    <title>VENOCYBER-MD</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -41,7 +41,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">KEITH-MD</a>
+        <a class="navbar-brand" href="#">VENOCYBER-MD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,7 +62,7 @@
                 <div class="card">
                     <div class="card-header">This Bot Owner</div>
                     <div class="card-body">
-                        <p>Name: Keithkeizzah</p>
+                        <p>Name: rajola</p>
                         <p>Contact: <a href="https://t.me/keithmd" target="_blank">Telegram</a></p>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>KEITH-MD is a versatile and powerful whatsapp bot designed to provide various functionalities and services. Developed by keithkeizzah, the bot offers seamless integration with Telegram and various other platforms.</p>
+                    <p>VENOCYBER-MD is a versatile and powerful whatsapp bot designed to provide various functionalities and services. Developed by keithkeizzah, the bot offers seamless integration with Telegram and various other platforms.</p>
                     <p>For more information, contact the developer via <a href="https://t.me/keithkeizzah" target="_blank">Telegram</a>.</p>
                 </div>
                 <div class="modal-footer">
